--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <hr>
 
-        <h1 id="Sobre-mim">Sobre Mim</h1>
-        <span class="text-properties white-text">
+        <h1 id="sobre-mim">Sobre Mim</h1>
+        <span id="line-height" class="text-properties white-text">
             Textos sobre mim
         </span>
         
