--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <span id="line-height" class="text-properties white-text">
             Textos sobre mim
         </span>
-        
+        <hr>
+
+        <h2>Minhas experiências e aspirações</h2>
+        <div class="text-properties white-text">A seguir, há alguns detalhes a mais sobre as minhas experiências como estudante de informática e minhas aspirações.</div>
+
+        <a href="/páginas/experiências/index.html" class="button">Outras experiências</a>
+        <br>
+        <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
     </body>
 </html>
