--- a/páginas/aspirações/index.html
+++ b/páginas/aspirações/index.html
@@ -7,6 +7,21 @@
         <title>Título</title>
     </head>
     <body>
+        <h1>Aspirações</h1>
+        <div class="text-properties white-text">
+            Serão destacados nesta seção alguns objetivos de vida ambicionados para a atuação profissional.
+        </div>
+        <hr>
 
+        <h2>Desenvolvimento de Jogos</h2>
+        <div class="text-properties white-text">
+            Nesta carreira, pretendo desenvolver jogos, que sejam bidimensionais ou tridimensionais, assim como desenvolvedores na qual me inspiro, como Toby Foxy e Eric Barone, que produziram jogos de maneira totalmente autônoma.
+        </div>
+        <hr>
+
+        <h2>Explore outras páginas</h2>
+        <a href="/index.html" class="button">Página inicial</a>
+        <br>
+        <a href="/páginas/experiências/index.html" class="button">Experiências</a>
     </body>
 </html>
