--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
         <title>Título</title>
     </head>
     <body>
-        <h1>Portifólio do lindo</h1>
-        <h2>Dados Pessoais</h2>
-        <div class="text-properties white-text">
-            <b>Nome:</b> Thomás Matos Mendes
-        </div>
-        <div class="text-properties white-text">
-            <b>Data de Nascimento:</b> 20/06/2006
-        </div>
-        <div class="text-properties white-text">
-            <b>Endereço:</b> Salinas – MG
-        </div>
-        <hr>
+        <div class="container">
+            <div class="content">
+                <h1>Portifólio do lindo</h1>
+                <h2>Dados Pessoais</h2>
+                <div class="text-properties white-text">
+                    <b>Nome:</b> Thomás Matos Mendes
+                </div>
+                <div class="text-properties white-text">
+                    <b>Data de Nascimento:</b> 20/06/2006
+                </div>
+                <div class="text-properties white-text">
+                    <b>Endereço:</b> Salinas – MG
+                </div>
+                <hr>
 
-        <h1 id="sobre-mim">Sobre Mim</h1>
-        <span id="line-height" class="text-properties white-text">
-            Textos sobre mim
-        </span>
-        <hr>
+                <h1 id="sobre-mim">Sobre Mim</h1>
+                <span id="line-height" class="text-properties white-text">
+                    Textos sobre mim
+                </span>
+                <hr>
 
-        <h2>Minhas experiências e aspirações</h2>
-        <div class="text-properties white-text">A seguir, há alguns detalhes a mais sobre as minhas experiências como estudante de informática e minhas aspirações.</div>
+                <h2>Minhas experiências e aspirações</h2>
+                <div class="text-properties white-text">A seguir, há alguns detalhes a mais sobre as minhas experiências como estudante de informática e minhas aspirações.</div>
 
-        <a href="/páginas/experiências/index.html" class="button">Outras experiências</a>
-        <br>
-        <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
+                <a href="/páginas/experiências/index.html" class="button">Experiências</a>
+                <br>
+                <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
+            </div>
+        </div>
     </body>
 </html>
