--- a/páginas/experiências/index.html
+++ b/páginas/experiências/index.html
@@ -7,53 +7,88 @@
         <title>Título</title>
     </head>
     <body>
-        <h1>Experiências</h1>
-        <div class="text-properties white-text">
-            No tópico a seguir, serão destacadas a minha formação acadêmica, experiências profissionais e conquistas até agora.
+        <div class="container">
+            <div class="content">
+                <h1>Experiências</h1>
+                <div class="text-properties white-text">
+                    No tópico a seguir, serão destacadas a minha formação acadêmica, experiências profissionais e conquistas até agora.
+                </div>
+                <hr>
+
+                <h2>Formação acadêmica</h2>
+                <ul class="text-properties white-text">
+                    <li>
+                        <h3>Formação em andamento em Tecnologia em Informática</h3>
+                        <div>
+                            <b>Local:</b> Instituto Federal do Norte de Minas Gerais – <i>Campus</i> Salinas
+                        </div>
+                    </li>
+                </ul>
+                <hr>
+
+                <h2>Experiências profissionais</h2>
+                <ul class="text-properties white-text">
+                    <li>
+                        <h3>Estágio Supervisionado</h3>
+                        <div>
+                            <b>Empresa:</b> L&G Informática
+                        </div>
+                        <div>
+                            <b>Local:</b> Salinas (MG)
+                        </div>
+                        <div>
+                            <b>Área técnica:</b> Informática
+                        </div>
+                        <div>
+                            <b>Áreas de atuação:</b> Instrutor de Informática; Montador de Computadores
+                        </div>
+                        <div>
+                            <b>Atividades desenvolvidas:</b> Auxílio de alunos; montagem e manutenção de computadores; criação de atividades avaliativas
+                        </div>
+                        <div>
+                            <b>Orientador:</b> Alison Zille Lopes
+                        </div>
+                    </li>
+                </ul>
+                <hr>
+
+                <h2>Conquistas</h2>
+                <ul class="text-properties white-text">
+                    <li>
+                        <h3>Certificado de Menção Honrosa</h3>
+                        <div>
+                            <b>Evento:</b> Olimpíadas Brasileiras de Matemática das Escolas Públicas e Privadas – OBMEP
+                        </div>
+                        <div>
+                            <b>Ano:</b> 2021
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Certificado de Menção Honrosa</h3>
+                        <div>
+                            <b>Evento:</b> Olimpíadas Brasileiras de Matemática das Escolas Públicas e Privadas – OBMEP
+                        </div>
+                        <div>
+                            <b>Ano:</b> 2023
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Medalha de Bronze</h3>
+                        <div>
+                            <b>Evento:</b> Olimpíadas Brasileiras de Astronomia e Astronáutica – OBA
+                        </div>
+                        <div>
+                            <b>Ano:</b> 2023
+                        </div>
+                    </li>
+                </ul>
+                <hr>
+
+                <h2>Explore outras páginas</h2>
+                <a href="/index.html" class="button">Página inicial</a>
+                <br>
+                <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
+            </div>
         </div>
-        <hr>
-
-        <h2>Formação acadêmica</h2>
-        <ul class="text-properties white-text">
-            <li>
-                <h3>Formação em andamento em Tecnologia em Informática</h3>
-                <div>
-                    <b>Local:</b> Instituto Federal do Norte de Minas Gerais – <i>Campus</i> Salinas
-                </div>
-            </li>
-        </ul>
-        <hr>
-
-        <h2>Experiências profissionais</h2>
-        <ul class="text-properties white-text">
-            <li>
-                <h3>Estágio Supervisionado</h3>
-                <div>
-                    <b>Empresa:</b> L&G Informática
-                </div>
-                <div>
-                    <b>Local:</b> Salinas (MG)
-                </div>
-                <div>
-                    <b>Área técnica:</b> Informática
-                </div>
-                <div>
-                    <b>Áreas de atuação:</b> Instrutor de Informática; Montador de Computadores
-                </div>
-                <div>
-                    <b>Atividades desenvolvidas:</b> Auxílio de alunos; montagem e manutenção de computadores; criação de atividades avaliativas
-                </div>
-                <div>
-                    <b>Orientador:</b> Alison Zille Lopes
-                </div>
-            </li>
-        </ul>
-        <hr>
-
-        <h2>Conquistas</h2>
-        <ul class="text-properties white-text">
-            
-        </ul>
-
     </body>
 </html>
