--- a/index.html
+++ b/index.html
@@ -11,29 +11,38 @@
             <div class="content">
                 <h1>Portifólio do lindo</h1>
                 <h2>Dados Pessoais</h2>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     <b>Nome:</b> Thomás Matos Mendes
                 </div>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     <b>Data de Nascimento:</b> 20/06/2006
                 </div>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     <b>Endereço:</b> Salinas – MG
+                </div>
+                <div class="text-properties red-text">
+                    <b>E-mail:</b> tmm9@aluno.ifnmg.edu.br
                 </div>
                 <hr>
 
                 <h1 id="sobre-mim">Sobre Mim</h1>
-                <span id="line-height" class="text-properties white-text">
+                <span id="line-height" class="text-properties darkgreen-text">
                     Textos sobre mim
                 </span>
                 <hr>
 
                 <h2>Minhas experiências e aspirações</h2>
-                <div class="text-properties white-text">A seguir, há alguns detalhes a mais sobre as minhas experiências como estudante de informática e minhas aspirações.</div>
+                <div class="text-properties darkgreen-text">A seguir, há alguns detalhes a mais sobre as minhas experiências como estudante de informática e minhas aspirações.</div>
 
                 <a href="/páginas/experiências/index.html" class="button">Experiências</a>
                 <br>
                 <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
+                <hr>
+
+                <h3>Conecte-se comigo!</h3>
+                    <b>Outras Rede</b>
+                    <img class="ico-properties" src="/imgs/github.png">
+                
             </div>
         </div>
     </body>
