--- a/páginas/aspirações/index.html
+++ b/páginas/aspirações/index.html
@@ -10,13 +10,13 @@
         <div class="container">
             <div class="content">
                 <h1>Aspirações</h1>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     Serão destacados nesta seção alguns objetivos de vida ambicionados para a atuação profissional.
                 </div>
                 <hr>
 
                 <h2>Desenvolvimento de Jogos</h2>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     Nesta carreira, pretendo desenvolver jogos, que sejam bidimensionais ou tridimensionais, assim como desenvolvedores na qual me inspiro, como Toby Foxy e Eric Barone, que produziram jogos de maneira totalmente autônoma.
                 </div>
                 <hr>
