--- a/páginas/experiências/index.html
+++ b/páginas/experiências/index.html
@@ -10,13 +10,13 @@
         <div class="container">
             <div class="content">
                 <h1>Experiências</h1>
-                <div class="text-properties white-text">
+                <div class="text-properties darkgreen-text">
                     No tópico a seguir, serão destacadas a minha formação acadêmica, experiências profissionais e conquistas até agora.
                 </div>
                 <hr>
 
                 <h2>Formação acadêmica</h2>
-                <ul class="text-properties white-text">
+                <ul class="text-properties darkgreen-text">
                     <li>
                         <h3>Formação em andamento em Tecnologia em Informática</h3>
                         <div>
@@ -27,7 +27,7 @@
                 <hr>
 
                 <h2>Experiências profissionais</h2>
-                <ul class="text-properties white-text">
+                <ul class="text-properties darkgreen-text">
                     <li>
                         <h3>Estágio Supervisionado</h3>
                         <div>
@@ -53,7 +53,7 @@
                 <hr>
 
                 <h2>Conquistas</h2>
-                <ul class="text-properties white-text">
+                <ul class="text-properties darkgreen-text">
                     <li>
                         <h3>Certificado de Menção Honrosa</h3>
                         <div>
