--- a/páginas/aspirações/index.html
+++ b/páginas/aspirações/index.html
@@ -22,7 +22,7 @@
                 <hr>
 
                 <h2>Explore outras páginas</h2>
-                <a href="/index.html" class="button">Página inicial</a>
+                <a href="/index.html" id="no-buttom-margin" class="button">Página inicial</a>
                 <br>
                 <a href="/páginas/experiências/index.html" class="button">Experiências</a>
             </div>
