--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                 <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
                 <hr>
 
-                <h3>Conecte-se comigo!</h3>
-                    <b>Outras Rede</b>
-                    <img class="ico-properties" src="/imgs/github.png">
-                
+                <div id="social-media" class="darkgreen-text">
+                    <h3>Conecte-se comigo!</h3>
+                    <a href="https://github.com/ThomasCapim" title="Github">
+                        <img class="ico-properties" src="/imgs/github.png">
+                    </a>
+                </div>
             </div>
         </div>
     </body>
