--- a/páginas/experiências/index.html
+++ b/páginas/experiências/index.html
@@ -85,7 +85,7 @@
                 <hr>
 
                 <h2>Explore outras páginas</h2>
-                <a href="/index.html" class="button">Página inicial</a>
+                <a href="/index.html" id="no-buttom-margin" class="button">Página inicial</a>
                 <br>
                 <a href="/páginas/aspirações/index.html" class="button">Aspirações</a>
             </div>
