--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
     <body>
         <div class="container">
             <div class="content">
-                <h1>Portifólio do lindo</h1>
-                <h2>Dados Pessoais</h2>
-                <div class="text-properties darkgreen-text">
-                    <b>Nome:</b> Thomás Matos Mendes
-                </div>
-                <div class="text-properties darkgreen-text">
-                    <b>Data de Nascimento:</b> 20/06/2006
-                </div>
-                <div class="text-properties darkgreen-text">
-                    <b>Endereço:</b> Salinas – MG
-                </div>
-                <div class="text-properties red-text">
-                    <b>E-mail:</b> tmm9@aluno.ifnmg.edu.br
+                <h1>Portifólio do Lindo</h1>
+                <div class="personal-data">
+                    <div class="text-section">
+                        <h2>Dados Pessoais</h2>
+                        <div class="text-properties darkgreen-text">
+                            <b>Nome:</b> Thomás Matos Mendes
+                        </div>
+                        <div class="text-properties darkgreen-text">
+                            <b>Data de Nascimento:</b> 20/06/2006
+                        </div>
+                        <div class="text-properties darkgreen-text">
+                            <b>Endereço:</b> Salinas – MG
+                        </div>
+                        <div class="text-properties darkgreen-text">
+                            <b>E-mail:</b> tmm9@aluno.ifnmg.edu.br
+                        </div>
+                    </div>
+                    <div class="image-section">
+                        <img src="/imgs/thomas.png" id="profile-picture" class="image-properties">
+                    </div>
                 </div>
                 <hr>
 
