--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <h1 id="sobre-mim">Sobre Mim</h1>
                 <span id="line-height" class="text-properties darkgreen-text">
-                    Textos sobre mim
+                    Estudante do curso técnico de informática integrado ao ensino médio no Instituto federal do Norte de Minas Gerais – <i>Campus</i> Salinas. Medalhista de bronze na Olimpíada de Astronomia e Astronáutica (OBA) e duas vezes certificado com menções honrosas na Olimpíada Brasileira de Matemática das Escolas Públicas e Privadas (OBMEP). Tem interesse em cursar Ciência da Computação e nos estudos de desenvolvimento de jogos e programação em geral.
                 </span>
                 <hr>
 
