--- a/páginas/experiências/index.html
+++ b/páginas/experiências/index.html
@@ -18,7 +18,7 @@
                 <h2>Formação acadêmica</h2>
                 <ul class="text-properties darkgreen-text">
                     <li>
-                        <h3>Formação em andamento em Tecnologia em Informática</h3>
+                        <h3 class="no-bottom-margin">Formação em andamento em Tecnologia em Informática</h3>
                         <div>
                             <b>Local:</b> Instituto Federal do Norte de Minas Gerais – <i>Campus</i> Salinas
                         </div>
