--- a/páginas/experiências/index.html
+++ b/páginas/experiências/index.html
@@ -29,7 +29,7 @@
                 <h2>Experiências profissionais</h2>
                 <ul class="text-properties darkgreen-text">
                     <li>
-                        <h3>Estágio Supervisionado</h3>
+                        <h3 class="no-bottom-margin">Estágio Supervisionado</h3>
                         <div>
                             <b>Empresa:</b> L&G Informática
                         </div>
@@ -55,7 +55,7 @@
                 <h2>Conquistas</h2>
                 <ul class="text-properties darkgreen-text">
                     <li>
-                        <h3>Certificado de Menção Honrosa</h3>
+                        <h3 class="no-bottom-margin">Certificado de Menção Honrosa</h3>
                         <div>
                             <b>Evento:</b> Olimpíadas Brasileiras de Matemática das Escolas Públicas e Privadas – OBMEP
                         </div>
@@ -64,7 +64,7 @@
                         </div>
                     </li>
                     <li>
-                        <h3>Certificado de Menção Honrosa</h3>
+                        <h3 class="no-bottom-margin">Certificado de Menção Honrosa</h3>
                         <div>
                             <b>Evento:</b> Olimpíadas Brasileiras de Matemática das Escolas Públicas e Privadas – OBMEP
                         </div>
@@ -73,7 +73,7 @@
                         </div>
                     </li>
                     <li>
-                        <h3>Medalha de Bronze</h3>
+                        <h3 class="no-bottom-margin">Medalha de Bronze</h3>
                         <div>
                             <b>Evento:</b> Olimpíadas Brasileiras de Astronomia e Astronáutica – OBA
                         </div>
